adding validation, wiring up controls to job properties, adding log appender, adding coordinate system list, adding radio enable/disable sub controls, fixing grid size parsing bug, adding tooltips for some, more variable file validation,

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/MainForm.resx
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/MainForm.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="folderBrowserOutputDir.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>157, 45</value>
+    <value>877, 13</value>
   </metadata>
   <metadata name="ofdVariablesFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>8, 43</value>
+    <value>739, 13</value>
   </metadata>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>11, 12</value>
@@ -130,16 +130,16 @@
     <value>320, 11</value>
   </metadata>
   <metadata name="ofdExportBoundaryShp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>822, 50</value>
+    <value>17, 52</value>
   </metadata>
   <metadata name="openFileJob.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>181, 13</value>
   </metadata>
   <metadata name="ofdOutputProjection.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>616, 51</value>
+    <value>1222, 13</value>
   </metadata>
   <metadata name="ofdGridEnvelopeShp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>415, 49</value>
+    <value>1059, 13</value>
   </metadata>
   <metadata name="saveFileMessageLog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>447, 13</value>
@@ -267,6 +267,9 @@
         GCkmtDPlkFNhpmrbZoQxVwUPdq/xLdv/AF5eZC1N9fX5oQ6p/XmbYcK98fb800ohanqKmOAxv0/4i//Z
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>209, 47</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAgIAAAAEAIAAoCAEAZgAAAEBAAAABACAAKEIAAI4IAQAwMAAAAQAgAKglAAC2SgEAICAAAAEA
