#23694 - working on this, also changing font, startup text based on feedback.

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/MainForm.resx
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/MainForm.resx
@@ -6448,4 +6448,7 @@
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 51</value>
   </metadata>
+  <metadata name="fbdWorkingDir.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>489, 51</value>
+  </metadata>
 </root>
