updating readme files to match

--- a/README
+++ b/README
@@ -2,8 +2,7 @@
 ACS Alchemist Readme
 -------------------------------------------------------------------------------
 
-Copyright (C) 2011-2012 Azavea Inc.
-
+Copyright (c) 2011-2012 Azavea Inc.
 
 
 Introduction
@@ -15,7 +14,9 @@ The ACS Alchemist is a tool that can help you extract specific portions of the A
 
 About
 -------------------------------------
-This tool was developed by Azavea in collaboration with Jerry Ratcliffe and Ralph Taylor of Temple University and partially funded by a Predictive Policing grant from the National Institute of Justice (Award # 2010-DE-BX-K004).
+This tool was developed by Azavea in collaboration with Jerry Ratcliffe and Ralph Taylor of Temple University Center for Security and Crime Science.
+
+This project was supported by Award No. 2010-DE-BX-K004, awarded by the National Institute of Justice, Office of Justice Programs, U.S. Department of Justice. The opinions, findings, and conclusions or recommendations expressed in this software are those of the author(s) and do not necessarily reflect those of the Department of Justice. The source code is released under a GPLv3 license and is available at:  http://github.com/azavea/ACSAlchemist/
 
 
 Disclaimer / License
