adding download link

--- a/README
+++ b/README
@@ -18,6 +18,10 @@ This tool was developed by Azavea in collaboration with Jerry Ratcliffe and Ralp
 
 This project was supported by Award No. 2010-DE-BX-K004, awarded by the National Institute of Justice, Office of Justice Programs, U.S. Department of Justice. The opinions, findings, and conclusions or recommendations expressed in this software are those of the author(s) and do not necessarily reflect those of the Department of Justice. The source code is released under a GPLv3 license and is available at:  https://github.com/azavea/acs-alchemist
 
+Download / Install
+-------------------------------------
+You can obtain the latest prepared installer for the Windows operating system here: https://github.com/azavea/acs-alchemist/downloads .
+
 
 Disclaimer / License
 -------------------------------------
