--- a/README
+++ b/README
@@ -20,7 +20,7 @@ This project was supported by Award No. 2010-DE-BX-K004, awarded by the National
 
 Download / Install
 -------------------------------------
-You can obtain the latest prepared installer for the Windows operating system here: https://github.com/azavea/acs-alchemist/downloads .
+You can obtain the latest prepared installer for the Windows operating system here: https://github.com/azavea/acs-alchemist/downloads 
 
 
 Disclaimer / License
